[tool.poetry]
name = "steampy"
version = "0.87b"
description = "steampy"
authors = ["liu-junyong <720556@qq.com>"]

[tool.poetry.dependencies]
python = "^3.7"
rsa = "4.7.2"
beautifulsoup4 = "4.10.0"
requests = "^2.26.0"
aiohttp = "^3.8.1"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
