[tool.poetry]
name = "steampy"
version = "0.88.3"
description = "steampy"
authors = ["liu-junyong <720556@qq.com>"]

[tool.poetry.dependencies]
python = "^3.10"
rsa = "^4.9"
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"
aiohttp = "^3.8.1"
loguru = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
